kubernetes/mongo-svc.yml

apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017  # Port for the MongoDB service
      targetPort: 27017  # Port on the MongoDB pods
