kubernetes/nodejs-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app
spec:
  ports:
  - name: "http"
    port: 3000
    targetPort: 3000
  selector:
    app: nodejs-app
