kubernetes/nodejs-app.ingrress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
      http:
        paths:
          - path: /mongodb
            pathType: Prefix
            backend:
              service:
                name: mongodb
                port:
                  number: 27017
          - path: /nodejs-app
            pathType: Prefix
            backend:
              service:
                name: nodejs-app
                port:
                  number: 3000
          - path: /redis
            pathType: Prefix
            backend:
              service:
                name: redis
                port:
                  number: 6379
